[package]
name = "ukhasnet-parser"
description = "A parser for the UKHASnet protocol"
version = "0.2.2"
authors = ["Adam Greig <adam@adamgreig.com>"]
repository = "https://github.com/adamgreig/ukhasnet-parser"
homepage = "https://github.com/adamgreig/ukhasnet-parser"
license = "MIT"
readme = "README.md"

[dependencies]
nom = "1.2.2"
rustc-serialize = "0.3"

[lib]
name = "ukhasnet_parser"
path = "src/lib.rs"

[[bin]]
name = "ukhasnet-parser-socket-stream"
path = "src/socket_stream.rs"

[[bin]]
name = "ukhasnet-parser-simple-demo"
path = "examples/simple.rs"

[[bin]]
name = "ukhasnet-parser-bench"
path = "src/bench.rs"
