[package]
name = "ukhasnet-parser"
description = "A parser for the UKHASnet protocol"
version = "0.3.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
repository = "https://github.com/adamgreig/ukhasnet-parser"
homepage = "https://github.com/adamgreig/ukhasnet-parser"
license = "MIT"
readme = "README.md"

[dependencies]
pest = "0.3.2"
rustc-serialize = "0.3"

[lib]
name = "ukhasnet_parser"
path = "src/lib.rs"

[[bin]]
name = "ukhasnet-parser-socket-stream"
path = "src/socket_stream.rs"

[[bin]]
name = "ukhasnet-parser"
path = "src/cli.rs"

[[bin]]
name = "ukhasnet-parser-simple"
path = "examples/simple.rs"

[[bin]]
name = "ukhasnet-parser-batch"
path = "examples/batch.rs"
