[package]
name = "ukhasnet-parser"
description = "A parser for the UKHASnet protocol"
version = "0.4.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
repository = "https://github.com/adamgreig/ukhasnet-parser"
homepage = "https://github.com/adamgreig/ukhasnet-parser"
license = "MIT"
readme = "README.md"

[dependencies]
pest = "0.4"
rustc-serialize = "0.3"

[lib]
name = "ukhasnet_parser"
path = "src/lib.rs"
